add peers expiring

--- a/README.org
+++ b/README.org
@@ -26,8 +26,9 @@
    : {answer_compact, false},      % always return compact list of peers
    : {answer_max_peers, 50},       % max number of peers to return
    : {answer_interval, 1800},      % client interval value in answer to announce
-   : {scrape_request_interval, 1800}  % minimum number of seconds to wait before
-   :                               % scraping the tracker again
+   : {scrape_request_interval, 1800},  % minimum number of seconds to wait before
+   :                                   % scraping the tracker again
+   : {clean_interval, 2700}        % database garbage clearing interval
 
 ** Сборка
 
