--- a/README.org
+++ b/README.org
@@ -2,7 +2,6 @@
 
   Простой BitTorrent трекер.
 
-
 * Установка
 
 ** Зависимости
@@ -13,13 +12,12 @@
 
    : cd rel/files
 
-   - sys.config :: файл конфигурации приложения
+   - =sys.config= файл конфигурации приложения
 
-   - vm.args :: параметры виртуальной машины =Erlang=
+   - =vm.args= параметры виртуальной машины =Erlang=
 
    Наиболее интересные параметры приложения:
 
-   : [
    : {http_port, 8080},            % port to listen for requests
    : {http_ip, "127.0.0.1"},       % server address
    : {http_num_acceptors, 16},     % pool of request acceptors
@@ -56,3 +54,60 @@
 ** Останов
 
    : path_to_etracker_dir/bin/etracker stop
+
+** Запросы HTTP
+
+*** announce
+
+    : server-http-address/announce?...
+
+*** scrape
+
+    : erver-http-address/scrape
+    : server-http-address/scrape?...
+
+*** stats
+
+    : server-http-address/stats
+
+    : server-http-address/stats?[id=val]*
+
+    где =val= имя интересующего параметра
+
+    При запросе с =Content-Type= =application/json= ответ выдается в
+    JSON формате:
+
+    : {value: [{KeyName: KeyValue}]}
+    или
+    : {error: Reason}
+
+    При запросе с =Content-Type= =text/html= ответ выдается в виде HTML.
+
+    Запрос выдает и принимает следующие параметры:
+
+    - =torrents= число известных трекеру торрентов
+
+    - =seeders= число известных трекеру сидеров
+
+    - =leechers= число известных трекеру личеров
+
+    -=peers= общее число пиров
+
+    Статистика по следующим параметрам ведется с момента последнего
+    старта сервера:
+
+    - =announces= число принятых =announce= запросов
+
+    - =scrapes= число принятых =scrape= запросов
+
+    - =invalid_queries= число отвергнутых =announce= запросов с
+      некорректными параметрами
+
+    - =failed_queries= число отвергнутых =announce= запросов, которые
+      трекер не смог разобрать
+
+    - =unknown_queries= число запросов на некорректные URL
+
+    - =deleted_peers= число удаленных при очистке пиров, т.е. пиров,
+      не завершивших протокол обмена сигналом =stopped= или не
+      преславших =announce= в течении =announce_interval=
