--- a/README.org
+++ b/README.org
@@ -91,7 +91,7 @@
 
     - =leechers= число известных трекеру личеров
 
-    -=peers= общее число пиров
+    - =peers= общее число пиров
 
     Статистика по следующим параметрам ведется с момента последнего
     старта сервера:
@@ -110,4 +110,4 @@
 
     - =deleted_peers= число удаленных при очистке пиров, т.е. пиров,
       не завершивших протокол обмена сигналом =stopped= или не
-      преславших =announce= в течении =announce_interval=
+      приславших =announce= в течении =announce_interval=
