add cache for query results

--- a/README.org
+++ b/README.org
@@ -27,6 +27,9 @@
    : {scrape_request_interval, 1800},  % minimum number of seconds to wait before
    :                                   % scraping the tracker again
    : {clean_interval, 2700}        % database garbage clearing interval
+   : {db_cache_size, 1000000},     % entries in db cache
+   : {db_cache_peers_ttl, 120},    % seconds to keep peers per infohash
+   :                               % in cache, 0 means no cache
 
 ** Сборка
 
